@@ -1,3 +1,8 @@
+Sat, 08 Apr 2006 14:39:28 +0200 <thp@perli.net>
+	* "debugging" variable set to False again
+	* [ Bug #7016 ] corrupt file length -- fixed
+	* Pushed version (we'll now keep 0.7+svn... until 0.8)
+
 Sat, 08 Apr 2006 12:30:59 +0200 <thp@perli.net>
 	* ** gPodder version 0.7 is here! **
 	* Bumped version number to 0.7
